Make experiment clock fill screen

--- a/guition-esp32-s3-4848s040/device/lvgl.yaml
+++ b/guition-esp32-s3-4848s040/device/lvgl.yaml
@@ -86,9 +86,10 @@ lvgl:
         - label:
             text: "--:--"
             id: experiment_time
-            text_font: roboto48_font
+            text_font: roboto96_font
             text_color: 0xFFFFFF
             align: center
+            text_align: center
 
         # =========================================================================
         # BUTTON: Home (Go to Main Page)
