--- a/guition-esp32-s3-4848s040/assets/fonts.yaml
+++ b/guition-esp32-s3-4848s040/assets/fonts.yaml
@@ -15,6 +15,11 @@ font:
     bpp: 4
 
   - file: "gfonts://Roboto"
+    id: roboto96_font
+    size: 96
+    bpp: 4
+
+  - file: "gfonts://Roboto"
     id: roboto44_font
     size: 44
     bpp: 4
