Update button dimensions in button.yaml, changing height to 130px and width to 190px for improved UI layout consistency. Add new font style roboto36_style in fonts.yaml to enhance typography options.

--- a/guition-esp32-p4-jc1060p470/assets/fonts.yaml
+++ b/guition-esp32-p4-jc1060p470/assets/fonts.yaml
@@ -20,3 +20,5 @@ lvgl:
       text_font: roboto20_font
     - id: roboto24_style
       text_font: roboto24_font
+    - id: roboto36_style
+      text_font: roboto36_font
