--- a/guition-esp32-s3-4848s040-music/addon/entity_picker.yaml
+++ b/guition-esp32-s3-4848s040-music/addon/entity_picker.yaml
@@ -155,4 +155,4 @@ script:
       - lvgl.page.show:
           id: main_page
           animation: MOVE_TOP
-          time: 300ms
+          duration: 300ms
