--- a/guition-esp32-s3-4848s040-music/device/sensors.yaml
+++ b/guition-esp32-s3-4848s040-music/device/sensors.yaml
@@ -8,6 +8,10 @@
 # See README.md for the required HA template sensor configuration.
 # =============================================================================
 
+# Default TV source name (override in your main YAML substitutions if needed)
+substitutions:
+  tv_source: "TV"
+
 # Store last HA position and time so we can estimate elapsed time between updates
 # (HA template sensors poll every 2s; we tick every 1s for smooth progress)
 globals:
@@ -25,7 +29,7 @@ interval:
     then:
       - if:
           condition:
-            lambda: 'return !id(media_source_sensor).has_state() || id(media_source_sensor).state != "TV";'
+            lambda: 'return !id(media_source_sensor).has_state() || id(media_source_sensor).state != "${tv_source}";'
           then:
             - lvgl.label.update:
                 id: media_elapsed_label
@@ -142,7 +146,7 @@ text_sensor:
     on_value:
       - if:
           condition:
-            lambda: 'return x == "TV";'
+            lambda: 'return x == "${tv_source}";'
           then:
             # --- Enter TV mode ---
             - lvgl.widget.hide: album_art_background_widget
